src/objects/Repair_Note_Form__c.object
<CustomObject>
    <fields>
        <fullName>Abutment_Screw_Fracture_Location__c</fullName>
        <label>Abutment Screw Fracture Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abutment_Screw_Loosening_Location__c</fullName>
        <label>Abutment Screw Loosening Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Abutment_Screw_Tightening_Location__c</fullName>
        <label>Abutment Screw Tightening Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Repair Note Forms</relationshipLabel>
        <relationshipName>Repair_Note_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Age_of_Prosthesis_Months__c</fullName>
        <label>Age of Prosthesis Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Prosthesis_Years__c</fullName>
        <label>Age of Prosthesis Years</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bar_Fracture_Location__c</fullName>
        <label>Bar Fracture Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Apt_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Apt Calendar</label>
        <referenceTo>Clinical_Apt_Calendar__c</referenceTo>
        <relationshipLabel>Repair Note Forms</relationshipLabel>
        <relationshipName>Repair_Note_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Clinical_Note_Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Clinical Note Instance</label>
        <referenceTo>Clinical_Note_Instance__c</referenceTo>
        <relationshipLabel>Repair Note Forms</relationshipLabel>
        <relationshipName>Repair_Note_Forms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Denture_Base_Fracture_Location__c</fullName>
        <label>Denture Base Fracture Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opposing_Arch__c</fullName>
        <label>Opposing Arch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Natural Dentition</fullName>
                </value>
                <value>
                    <fullName>Full arch implant prosthesis</fullName>
                </value>
                <value>
                    <fullName>Complete Denture</fullName>
                </value>
                <value>
                    <fullName>Partial Denture</fullName>
                </value>
                <value>
                    <fullName>Crown/Bridge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prosthesis_Stage__c</fullName>
        <label>Prosthesis Stage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Interim</fullName>
                </value>
                <value>
                    <fullName>Final-Bar Acrylic</fullName>
                </value>
                <value>
                    <fullName>Trial-PMMA</fullName>
                </value>
                <value>
                    <fullName>Final-Zirconia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prosthesis_Type_Other__c</fullName>
        <label>Prosthesis Type Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosthesis_Type__c</fullName>
        <label>Prosthesis Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CD</fullName>
                </value>
                <value>
                    <fullName>RPD</fullName>
                </value>
                <value>
                    <fullName>Maxillary Arch</fullName>
                </value>
                <value>
                    <fullName>Mandibular Arch</fullName>
                </value>
                <value>
                    <fullName>S/M</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prosthetic_Screw_Fracture_Location__c</fullName>
        <label>Prosthetic Screw Fracture Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosthetic_Screw_Tightening_Location__c</fullName>
        <label>Prosthetic Screw Tightening Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Apt_Type__c</fullName>
        <label>Repair Apt Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rework</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Redeliver</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Reason_Other__c</fullName>
        <label>Repair Reason Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Reason__c</fullName>
        <label>Repair Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wear: Normal</fullName>
                </value>
                <value>
                    <fullName>Wear: Bruxism</fullName>
                </value>
                <value>
                    <fullName>Trauma</fullName>
                </value>
                <value>
                    <fullName>Material Overload</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Repair_Work_Type_Other__c</fullName>
        <label>Repair Work Type Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Repair_Work_Type__c</fullName>
        <label>Repair Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Denture Base Fracture</fullName>
                </value>
                <value>
                    <fullName>Tooth Fracture</fullName>
                </value>
                <value>
                    <fullName>Tooth Debonding</fullName>
                </value>
                <value>
                    <fullName>Bar Fracture</fullName>
                </value>
                <value>
                    <fullName>Prosthetic screw fracture</fullName>
                </value>
                <value>
                    <fullName>Abutment screw fracture</fullName>
                </value>
                <value>
                    <fullName>Abutment screw loosening</fullName>
                </value>
                <value>
                    <fullName>Abutment Fracture</fullName>
                </value>
                <value>
                    <fullName>Zirconia Coping Failure</fullName>
                </value>
                <value>
                    <fullName>Zirconia Chip / Fracture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prosthodontist</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rework_Completed_Other__c</fullName>
        <label>Rework Completed Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rework_Completed__c</fullName>
        <label>Rework Completed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Acrylic</fullName>
                </value>
                <value>
                    <fullName>Reduce Acrylic</fullName>
                </value>
                <value>
                    <fullName>Occlusal Adjustment</fullName>
                </value>
                <value>
                    <fullName>Retread</fullName>
                </value>
                <value>
                    <fullName>Prosthetic screw tightening</fullName>
                </value>
                <value>
                    <fullName>Abutment screw tightening</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rework_Reason_Other__c</fullName>
        <label>Rework Reason Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rework_Reason__c</fullName>
        <label>Rework Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bite Modification</fullName>
                </value>
                <value>
                    <fullName>Esthetic Correction</fullName>
                </value>
                <value>
                    <fullName>Excess Wear</fullName>
                </value>
                <value>
                    <fullName>Inadequate Cantilever Support</fullName>
                </value>
                <value>
                    <fullName>Inadequate Framework Support</fullName>
                </value>
                <value>
                    <fullName>Structural Modification</fullName>
                </value>
                <value>
                    <fullName>Screw Loosening</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_in_Lab_Minutes__c</fullName>
        <label>Time in Lab Minutes</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_in_Lab__c</fullName>
        <label>Time in Lab Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tooth_Debonding_Location__c</fullName>
        <label>Tooth Debonding Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tooth_Fracture_Location__c</fullName>
        <label>Tooth Fracture Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <label>Repair Note Form</label>
    <nameField>
        <displayFormat>RNFN-{0000}</displayFormat>
        <label>Repair Note Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repair Note Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>